--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/JVM 1.4.2"/>
-	<classpathentry kind="lib" path="libraries/JNIWrapper.jar"/>
 	<classpathentry kind="lib" path="libraries/NetUtil.jar"/>
+	<classpathentry kind="lib" path="JNITablet/build/TabletWrapper.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
