--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
 	<property name="lib.dir"		value="libraries"/>
 	<property name="libraries"		value="${lib.dir}/NetUtil.jar:JNITablet/build/TabletWrapper.jar"/>
     <property name="version"		value="0.60"/>
-    <property name="debug"			value="false"/>
+    <property name="debug"			value="true"/>
 	
 	<taskdef resource="net/sf/antcontrib/antlib.xml"/>
 	
