WARNING: experimental version with java application framework, JSCWindow now based on AppWindow, adding JSCMenu funcationality.

--- a/build.xml
+++ b/build.xml
@@ -12,8 +12,8 @@
 	<property name="resources.dir"	value="resources"/>
     <property name="main-class"		value="de.sciss.swingosc.SwingOSC"/>
 	<property name="lib.dir"		value="libraries"/>
-	<property name="libraries"		value="${lib.dir}/NetUtil.jar:JNITablet/build/TabletWrapper.jar"/>
-    <property name="version"		value="0.60"/>
+	<property name="libraries"		value="${lib.dir}/NetUtil.jar:${lib.dir}/MRJAdapter.jar:JNITablet/build/TabletWrapper.jar"/>
+    <property name="version"		value="0.61"/>
     <property name="debug"			value="true"/>
 	
 	<taskdef resource="net/sf/antcontrib/antlib.xml"/>
@@ -50,6 +50,7 @@
 		<jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${resources.dir}" update="true"/>
 		<if><not><equals arg1="${plain}" arg2="true" /></not><then>
 			<unjar src="${lib.dir}/NetUtil.jar" dest="${lib.dir}" />
+			<unjar src="${lib.dir}/MRJAdapter.jar" dest="${lib.dir}" />
 			<unjar src="JNITablet/build/TabletWrapper.jar" dest="${lib.dir}" />
 			<jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${lib.dir}" excludes="*.jar" update="true"/>
 			<delete includeemptydirs="true">
@@ -62,7 +63,7 @@
         	<!-- <arg value="..."/> -->
     	</java>
     </target>
-	<target name="main" depends="clean,compile" />
+	<target name="main" depends="clean,jar" />
 	<target name="dist" depends="clean,jar">
 		<!-- sucky zip task don't create separate folder -->
 		<dirname property="parent.dir" file="${basedir}"/>
