--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/JVM 1.4.2"/>
 	<classpathentry kind="lib" path="libraries/NetUtil.jar"/>
-	<classpathentry kind="lib" path="JNITablet/build/TabletWrapper.jar"/>
+	<classpathentry kind="lib" path="JNITablet/build/TabletWrapper.jar" sourcepath="JNITablet/src"/>
 	<classpathentry kind="lib" path="libraries/MRJAdapter.jar" sourcepath="/Users/rutz/Desktop/MRJAdapter/src"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
