--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,7 @@
 	<property name="resources.dir"	value="resources"/>
     <property name="main-class"		value="de.sciss.swingosc.SwingOSC"/>
 	<property name="lib.dir"		value="libraries"/>
-	<property name="libraries"		value="${lib.dir}/NetUtil.jar:${lib.dir}/MRJAdapter.jar:JNITablet/build/TabletWrapper.jar"/>
+	<property name="libraries"		value="${lib.dir}/ScissLib.jar:${lib.dir}/NetUtil.jar:${lib.dir}/MRJAdapter.jar:JNITablet/build/TabletWrapper.jar"/>
     <property name="version"		value="0.61"/>
     <property name="debug"			value="true"/>
 	
