--- a/build.xml
+++ b/build.xml
@@ -49,6 +49,7 @@
 		</jar>
 		<jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${resources.dir}" update="true"/>
 		<if><not><equals arg1="${plain}" arg2="true" /></not><then>
+			<unjar src="${lib.dir}/ScissLib.jar" dest="${lib.dir}" />
 			<unjar src="${lib.dir}/NetUtil.jar" dest="${lib.dir}" />
 			<unjar src="${lib.dir}/MRJAdapter.jar" dest="${lib.dir}" />
 			<unjar src="JNITablet/build/TabletWrapper.jar" dest="${lib.dir}" />
