--- a/build.xml
+++ b/build.xml
@@ -52,6 +52,7 @@
 			<unjar src="${lib.dir}/ScissLib.jar" dest="${lib.dir}" />
 			<unjar src="${lib.dir}/NetUtil.jar" dest="${lib.dir}" />
 			<unjar src="${lib.dir}/MRJAdapter.jar" dest="${lib.dir}" />
+			<unjar src="${lib.dir}/miglayout-swing.jar" dest="${lib.dir}" />
 			<unjar src="JNITablet/build/TabletWrapper.jar" dest="${lib.dir}" />
 			<jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${lib.dir}" excludes="*.jar" update="true"/>
 			<delete includeemptydirs="true">
