--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="lib" path="libraries/NetUtil.jar"/>
 	<classpathentry kind="lib" path="JNITablet/build/TabletWrapper.jar" sourcepath="JNITablet/src"/>
 	<classpathentry kind="lib" path="libraries/MRJAdapter.jar" sourcepath="/Users/rutz/Desktop/MRJAdapter/src"/>
-	<classpathentry kind="lib" path="libraries/ScissLib.jar"/>
+	<classpathentry kind="lib" path="libraries/ScissLib.jar" sourcepath="/ScissLib/src"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
