--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,7 @@
 	<property name="resources.dir"	value="resources"/>
     <property name="main-class"		value="de.sciss.swingosc.SwingOSC"/>
 	<property name="lib.dir"		value="libraries"/>
+	<property name="doc.dir"		value="doc"/>
 	<property name="libraries"		value="${lib.dir}/ScissLib.jar:${lib.dir}/JCollider.jar:${lib.dir}/MRJAdapter.jar:JNITablet/build/TabletWrapper.jar"/>
     <property name="version"		value="0.62"/>
     <property name="debug"			value="true"/>
@@ -21,6 +22,7 @@
 	<target name="clean">
 		<delete dir="${build.dir}" />
 		<delete dir="${dist.dir}" />
+		<delete dir="${doc.dir}" />
 		<delete includeemptydirs="true">
 			<fileset dir="${lib.dir}" excludes="*.jar"/>
 		</delete>
@@ -64,6 +66,19 @@
         	<!-- <arg value="..."/> -->
     	</java>
     </target>
+	<target name="doc">
+		<javadoc packagenames="de.sciss.*" sourcepath="${src.dir}" destdir="${doc.dir}/api"
+		  classpath="${libraries}" version="true" author="true" use="true" source="1.4"
+		  linksource="false">
+			<tag name="synchronization" />
+			<tag name="todo" />
+			<tag name="warning" />
+			<link href="http://java.sun.com/j2se/1.4.2/docs/api/" />
+<!--		<link href="http://www.sciss.de/scissLib/doc/api/" /> -->
+			<link href="http://www.sciss.de/jcollider/doc/api/" />
+			<link href="http://www.sciss.de/netutil/doc/api/" />
+		</javadoc>
+	</target>
 	<target name="main" depends="clean,jar" />
 	<target name="dist" depends="clean,jar">
 		<!-- sucky zip task don't create separate folder -->
