basic webview working

--- a/build.xml
+++ b/build.xml
@@ -8,13 +8,14 @@
 	<property name="build.dir"		value="build"/>
 	<property name="dist.dir"		value="dist"/>
 	<property name="classes.dir"	value="${build.dir}/classes"/>
-	<property name="jar.dir"		value="${build.dir}"/>
+<!--	<property name="jar.dir"		value="${build.dir}" /> -->
+    <property name="jar.file"       value="${ant.project.name}.jar" />
 	<property name="resources.dir"	value="resources"/>
     <property name="main-class"		value="de.sciss.swingosc.SwingOSC"/>
 	<property name="lib.dir"		value="libraries"/>
 	<property name="doc.dir"		value="doc"/>
-	<property name="libraries"		value="${lib.dir}/ScissLib.jar:${lib.dir}/JCollider.jar:${lib.dir}/MRJAdapter.jar:JNITablet/build/TabletWrapper.jar"/>
-    <property name="version"		value="0.65"/>
+	<property name="libraries"		value="${lib.dir}/ScissLib.jar:${lib.dir}/JCollider.jar:${lib.dir}/MRJAdapter.jar:JNITablet/build/TabletWrapper.jar:${lib.dir}/lobo.jar:${lib.dir}/lobo-pub.jar:jmf/lib/jmf.jar"/>
+    <property name="version"		value="0.66"/>
     <property name="debug"			value="true"/>
 	
 	<taskdef resource="net/sf/antcontrib/antlib.xml"/>
@@ -23,46 +24,67 @@
 		<delete dir="${build.dir}" />
 		<delete dir="${dist.dir}" />
 		<delete dir="${doc.dir}" />
+        <delete file="${jar.file}" />
 		<delete includeemptydirs="true">
 			<fileset dir="${lib.dir}" excludes="*.jar"/>
 		</delete>
 	</target>
 	<target name="compile">
 		<mkdir dir="${classes.dir}" />
-		<available property="jmf.present" classname="javax.media.bean.playerbean.MediaPlayer"/>
+<!--		<available property="jmf.present" classname="javax.media.bean.playerbean.MediaPlayer"/>
 		<if><equals arg1="${jmf.present}" arg2="true" /><then>
+-->
 			<!-- <echo message="Java Media Framework FOUND" /> -->
 			<property name="excludes" value="" />
-		</then><else>
+<!--		</then><else>
 			<echo />
 			<echo message="==== Java Media Framework NOT FOUND. Will not compile MovieView! ====" />
 			<echo />
 			<property name="excludes" value="de/sciss/swingosc/MovieView.java" />
 		</else></if>
+-->
 		<javac debug="${debug}" srcdir="${src.dir}" destdir="${classes.dir}" classpath="${libraries}" excludes="${excludes}" source="1.4" target="1.4"/>
 	</target>
 	<target name="jar" depends="compile">
-		<mkdir dir="${jar.dir}" />
-		<jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
+<!--		<mkdir dir="${jar.dir}" /> -->
+		<jar destfile="${jar.file}" basedir="${classes.dir}">
 			<manifest>
 				<attribute name="Main-Class" value="${main-class}" />
 				<!-- <attribute name="Class-Path" value="${libraries}" /> -->
 			</manifest>
 		</jar>
-		<jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${resources.dir}" update="true"/>
+		<jar destfile="${jar.file}" basedir="${resources.dir}" update="true"/>
 		<if><not><equals arg1="${plain}" arg2="true" /></not><then>
 			<unjar src="${lib.dir}/ScissLib.jar" dest="${lib.dir}" />
 			<unjar src="${lib.dir}/JCollider.jar" dest="${lib.dir}" />
 			<unjar src="${lib.dir}/MRJAdapter.jar" dest="${lib.dir}" />
-			<unjar src="JNITablet/build/TabletWrapper.jar" dest="${lib.dir}" />
-			<jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${lib.dir}" excludes="*.jar" update="true"/>
+            <unjar src="JNITablet/build/TabletWrapper.jar" dest="${lib.dir}" />
+            <unjar src="${lib.dir}/lobo.jar" dest="${lib.dir}" />
+            <unjar src="${lib.dir}/lobo-pub.jar" dest="${lib.dir}" />
+
+            <unjar src="jmf/lib/customizer.jar" dest="${lib.dir}" />
+            <unjar src="jmf/lib/jmf.jar" dest="${lib.dir}" />
+            <unjar src="jmf/lib/mediaplayer.jar" dest="${lib.dir}" />
+            <unjar src="jmf/lib/multiplayer.jar" dest="${lib.dir}" />
+            <copy file="jmf/lib/jmf.properties" todir="${lib.dir}" />
+
+            <unjar src="${lib.dir}/cobra-no-commons.jar" dest="${lib.dir}" />
+            <unjar src="${lib.dir}/js.jar" dest="${lib.dir}" />
+<!--            <unjar src="${lib.dir}/primary.jar" dest="${lib.dir}" />
+            <unjar src="${lib.dir}/jmc.jar" dest="${lib.dir}" />
+            <unjar src="${lib.dir}/jlfgr-1_0.jar" dest="${lib.dir}" />
+            <unjar src="${lib.dir}/jweb-ext.jar" dest="${lib.dir}" />
+            <unjar src="${lib.dir}/websvc.jar" dest="${lib.dir}" />
+            <unjar src="${lib.dir}/Scenario.jar" dest="${lib.dir}" />
+-->
+			<jar destfile="${jar.file}" basedir="${lib.dir}" excludes="*.jar" update="true"/>
 			<delete includeemptydirs="true">
 				<fileset dir="${lib.dir}" excludes="*.jar"/>
 			</delete>
 		</then></if>
 	</target>
     <target name="test" depends="jar">
-        <java jar="${jar.dir}/${ant.project.name}.jar" fork="true">
+        <java jar="${jar.file}" fork="true">
         	<!-- <arg value="..."/> -->
     	</java>
     </target>
